Add parameters tag to support headless papermill
Signed-off-by: Fabiano Franz <contact@fabianofranz.com>

--- a/notebooks/use-cases/document-conversion-standard.ipynb
+++ b/notebooks/use-cases/document-conversion-standard.ipynb
@@ -48,7 +48,15 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d8d12166-8b40-4c46-9147-27cfc1c8b09a",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": [
+     "parameters"
+    ]
+   },
    "outputs": [],
    "source": [
     "files = [\n",
@@ -273,7 +281,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
