Split enrichments from the group of pipeline options and other improvements
Signed-off-by: Fabiano Franz <contact@fabianofranz.com>

--- a/notebooks/use-cases/document-conversion-standard.ipynb
+++ b/notebooks/use-cases/document-conversion-standard.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "This notebook uses **standard (non-VLM)** [Docling](https://docling-project.github.io/docling/) techniques to convert PDF documents into markdown and the [Docling Document](https://docling-project.github.io/docling/concepts/docling_document/) format, a structured representation of the original document that can be exported as JSON.\n",
     "\n",
-    "The standard pipeline options generally yield good and fast results for most documents. In some cases, however, alternative conversion pipelines can lead to better outcomes. For instance, forcing OCR is effective for scanned documents or images that contain text to be extracted and analyzed. In cases where relevant information is contained within formulas, code, or pictures; enrichment and picture description and classification might be useful. All these use cases are supported by this notebook."
+    "Conversions using the standard pipeline options generally yield good and fast results for most documents. In some cases, however, alternative conversion pipelines can lead to better outcomes. For instance, forcing OCR is effective for scanned documents or images that contain text to be extracted and analyzed. In cases where relevant information is contained within formulas, code, or pictures; enrichments might be useful. All these use cases are supported by this notebook."
    ]
   },
   {
@@ -84,7 +84,9 @@
    "source": [
     "from pathlib import Path\n",
     "\n",
-    "output_dir = Path(\"document-conversion-standard/output\")\n",
+    "output_dir_name = \"document-conversion-standard/output\"\n",
+    "\n",
+    "output_dir = Path(output_dir_name)\n",
     "output_dir.mkdir(parents=True, exist_ok=True)"
    ]
   },
@@ -93,11 +95,11 @@
    "id": "39d4e3ef-2fdb-45a3-a217-b07638a35363",
    "metadata": {},
    "source": [
-    "### Configure conversion pipeline\n",
+    "### Configure conversion pipelines\n",
     "\n",
-    "Next we set the configuration options for our conversion pipeline. \n",
+    "Next we create the configuration options for the conversion pipelines supported by this notebook. \n",
     "\n",
-    "The next cell contains three combinations of pipeline options: the default (standard) options, a variant that forces OCR on the entire document, and another one which enables code, formula, and picture enrichments. Later in the *Conversion* section, you'll set the converter to either `standard_converter`, `ocr_converter`, or `enrichment_converter` depending on which conversion technique you'd like to use.\n",
+    "The next cell configures two combinations of pipeline options: the **default (standard)** options, and a variant that **forces OCR** on the entire document. In a later cell you'll choose either the `standard` or `ocr` pipeline options depending on which conversion technique you'd like to use.\n",
     "\n",
     "Note: OCR requires the Tesseract binary to run. Please refer to the Docling [installation](https://docling-project.github.io/docling/installation/) docs if you're not running this notebook from a Workbench image that has it installed already. \n",
     "\n",
@@ -118,64 +120,117 @@
     "    TesseractOcrOptions,\n",
     "    PdfPipelineOptions,\n",
     ")\n",
-    "from docling.pipeline.vlm_pipeline import VlmPipeline\n",
     "from docling.backend.docling_parse_v4_backend import DoclingParseV4DocumentBackend\n",
     "\n",
-    "# Standard pipeline options\n",
-    "standard_pipeline_options = PdfPipelineOptions()\n",
-    "standard_pipeline_options.generate_picture_images = True\n",
-    "standard_pipeline_options.do_table_structure = True\n",
-    "standard_pipeline_options.table_structure_options.do_cell_matching = True\n",
-    "standard_converter = DocumentConverter(\n",
-    "    format_options={\n",
-    "        InputFormat.PDF: PdfFormatOption(\n",
-    "            pipeline_options=standard_pipeline_options,\n",
-    "            backend=DoclingParseV4DocumentBackend,\n",
-    "        )\n",
-    "    }\n",
-    ")\n",
+    "def create_standard_options() -> PdfPipelineOptions:\n",
+    "    \"\"\"Create base pipeline options with standard settings.\"\"\"\n",
+    "    pipeline_options = PdfPipelineOptions()\n",
+    "    pipeline_options.generate_picture_images = True\n",
+    "    pipeline_options.do_table_structure = True\n",
+    "    pipeline_options.table_structure_options.do_cell_matching = True\n",
+    "    pipeline_options.accelerator_options = AcceleratorOptions(\n",
+    "        num_threads=4, device=AcceleratorDevice.AUTO\n",
+    "    )\n",
+    "    return pipeline_options\n",
     "\n",
-    "# Force OCR on the entire page\n",
+    "# Standard converter\n",
+    "standard_options = create_standard_options()\n",
+    "\n",
+    "# OCR converter: force OCR on the entire page\n",
     "%env TESSDATA_PREFIX=/usr/share/tesseract/tessdata\n",
-    "ocr_pipeline_options = PdfPipelineOptions()\n",
-    "ocr_pipeline_options.generate_picture_images = True\n",
-    "ocr_pipeline_options.do_table_structure = True\n",
-    "ocr_pipeline_options.table_structure_options.do_cell_matching = True\n",
-    "ocr_pipeline_options.do_ocr = True\n",
-    "ocr_pipeline_options.ocr_options = TesseractOcrOptions(force_full_page_ocr=True)\n",
-    "ocr_pipeline_options.accelerator_options = AcceleratorOptions(\n",
-    "    num_threads=4, device=AcceleratorDevice.AUTO\n",
-    ")\n",
-    "ocr_converter = DocumentConverter(\n",
-    "    format_options={\n",
-    "        InputFormat.PDF: PdfFormatOption(\n",
-    "            pipeline_options=ocr_pipeline_options,\n",
-    "            backend=DoclingParseV4DocumentBackend,\n",
-    "        )\n",
-    "    }\n",
-    ")\n",
+    "ocr_options = create_standard_options()\n",
+    "ocr_options.do_ocr = True\n",
+    "ocr_options.ocr_options = TesseractOcrOptions(force_full_page_ocr=True)\n",
     "\n",
-    "# Code and formula enrichments and picture description and classification\n",
-    "enrichment_pipeline_options = PdfPipelineOptions()\n",
-    "enrichment_pipeline_options.generate_picture_images = True\n",
-    "enrichment_pipeline_options.do_table_structure = True\n",
-    "enrichment_pipeline_options.table_structure_options.do_cell_matching = True\n",
-    "enrichment_pipeline_options.do_code_enrichment = True\n",
-    "enrichment_pipeline_options.do_formula_enrichment = True\n",
-    "enrichment_pipeline_options.do_picture_description = True\n",
-    "enrichment_pipeline_options.images_scale = 2\n",
-    "enrichment_pipeline_options.do_picture_classification = True\n",
-    "enrichment_pipeline_options.accelerator_options = AcceleratorOptions(\n",
-    "    num_threads=4, device=AcceleratorDevice.AUTO\n",
-    ")\n",
-    "enrichment_converter = DocumentConverter(\n",
-    "    format_options={\n",
-    "        InputFormat.PDF: PdfFormatOption(\n",
-    "            pipeline_options=enrichment_pipeline_options,\n",
-    "            backend=DoclingParseV4DocumentBackend,\n",
-    "        )\n",
+    "def get_pipeline_options(pipeline_options_name: str = \"standard\") -> PdfPipelineOptions:\n",
+    "    \"\"\"Get the configured pipeline options based on name.\n",
+    "\n",
+    "    Args:\n",
+    "        pipeline_options_name: One of \"standard\" or \"ocr\"\n",
+    "    \n",
+    "    Returns:\n",
+    "        PdfPipelineOptions instance\n",
+    "        \n",
+    "    Raises:\n",
+    "        ValueError: If pipeline_options_name is not recognized\n",
+    "    \"\"\"\n",
+    "    pipeline_options = {\n",
+    "        \"standard\": standard_options,\n",
+    "        \"ocr\": ocr_options\n",
     "    }\n",
-    ")"
+    "\n",
+    "    if pipeline_options_name not in pipeline_options:\n",
+    "        raise ValueError(\n",
+    "            f\"Unknown pipeline options name: '{pipeline_options_name}'. \"\n",
+    "            f\"Choose from {list(pipeline_options.keys())}\"\n",
+    "        )\n",
+    "    \n",
+    "    return pipeline_options[pipeline_options_name]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "89396e34",
+   "metadata": {},
+   "source": [
+    "### Choose a conversion pipeline\n",
+    "\n",
+    "Next we choose the conversion pipeline to be used in the conversion.\n",
+    "\n",
+    "The **standard** pipeline generally yield good and fast results for the majority of documents. However, if you didn't get good results with the standard pipeline, or if you're converting scanned documents or ones that contain relevant text information within images, consider using the **ocr** pipeline. Just set `pipeline_to_use` to either `standard` or `ocr` accordingly."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "621f644c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set the pipeline to use (either \"standard\" or \"ocr\")\n",
+    "pipeline_to_use = \"standard\"\n",
+    "\n",
+    "pipeline_options = get_pipeline_options(pipeline_to_use)\n",
+    "\n",
+    "print(f\"✓ Using '{pipeline_to_use}' pipeline\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b286e6f2",
+   "metadata": {},
+   "source": [
+    "### Configure enrichments\n",
+    "\n",
+    "Depending on the characteristics of the documents being converted, you may benefit from the use of enrichments.\n",
+    "\n",
+    "Docling supports the enrichment of conversion pipelines with additional steps that'll process specific document components like code blocks, formulas, and pictures.\n",
+    "\n",
+    "All enrichment features are disabled by default, but you may enable them individually by setting one or more of the enrichment options in the next cell to `True`. Note that the extra steps usually require extra models executions, which may increase the processing time consistently.\n",
+    "\n",
+    " * `do_code_enrichment`: Performs advanced parsing of code blocks and sets the code language of each block accordingly.\n",
+    " * `do_formula_enrichment`: Analyzes equations and extracts their LaTeX representation.\n",
+    " * `do_picture_description`: Generates captions for pictures with a vision model.\n",
+    " * `do_picture_classification`: Classifies pictures, for example chart types, flow diagrams, logos, or signatures.\n",
+    "  \n",
+    "For additional customization and a complete reference of Docling's enrichments, check the [official documentation](https://docling-project.github.io/docling/usage/enrichments/)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9d5bf3df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sets code and formula enrichments and picture description and classification\n",
+    "pipeline_options.do_code_enrichment = False\n",
+    "pipeline_options.do_formula_enrichment = False\n",
+    "pipeline_options.do_picture_description = False\n",
+    "pipeline_options.do_picture_classification = False\n",
+    "\n",
+    "# If you enable enrichments, you may benefit from increasing the image scale (e.g. to 2)\n",
+    "pipeline_options.images_scale = 1\n"
    ]
   },
   {
@@ -185,7 +240,7 @@
    "source": [
     "## ✨ Conversion\n",
     "\n",
-    "Finally, convert every document into one `json` ([Docling Document](https://docling-project.github.io/docling/concepts/docling_document/)) and one `md` (markdown). If you'd like to change the conversion technique, set  `converter` to either `standard_converter`, `ocr_converter`, or `enrichment_converter`."
+    "Finally, use the pipeline options we configured to convert every document into one `json` ([Docling Document](https://docling-project.github.io/docling/concepts/docling_document/)) and one `md` (markdown), which will be stored in the output directory configured earlier."
    ]
   },
   {
@@ -198,35 +253,46 @@
     "import json\n",
     "from docling_core.types.doc import ImageRefMode\n",
     "\n",
-    "confidence_reports = dict()\n",
+    "# Create the document converter\n",
+    "converter = DocumentConverter(\n",
+    "        format_options={\n",
+    "            InputFormat.PDF: PdfFormatOption(\n",
+    "                pipeline_options=pipeline_options,\n",
+    "                backend=DoclingParseV4DocumentBackend,\n",
+    "            )\n",
+    "        }\n",
+    "    )\n",
+    "\n",
+    "confidence_reports = {}\n",
+    "\n",
+    "if not files:\n",
+    "    raise ValueError(\"No input files specified. Please set the 'files' list above.\")\n",
     "\n",
     "for file in files:\n",
-    "    # Set the converter to use (standard_converter, ocr_converter, or enrichment_converter)\n",
-    "    converter = standard_converter\n",
-    "    \n",
     "    # Convert the file\n",
     "    print(f\"Converting {file}...\")\n",
+    "\n",
     "    result = converter.convert(file)\n",
     "    document = result.document\n",
     "    dictionary = document.export_to_dict()\n",
     "\n",
-    "    file_path = Path(file)\n",
-    "\n",
     "    # Calculate conversion confidence\n",
     "    confidence_reports[file] = result.confidence\n",
+    "\n",
+    "    file_path = Path(file)\n",
     "\n",
     "    # Export the document to JSON\n",
     "    json_output_path = (output_dir / f\"{file_path.stem}.json\")\n",
     "    with open(json_output_path, \"w\", encoding=\"utf-8\") as f:\n",
     "        json.dump(dictionary, f)\n",
-    "        print(f\"Path of JSON output is: {Path(json_output_path).resolve()}\")\n",
+    "        print(f\"✓ Path of JSON output is: {json_output_path.resolve()}\")\n",
     "\n",
     "    # Export the document to Markdown\n",
     "    md_output_path = output_dir / f\"{file_path.stem}.md\"\n",
     "    with open(md_output_path, \"w\", encoding=\"utf-8\") as f:\n",
     "        markdown = document.export_to_markdown(image_mode=ImageRefMode.EMBEDDED)\n",
     "        f.write(markdown)\n",
-    "        print(f\"Path of markdown output is: {Path(md_output_path).resolve()}\")"
+    "        print(f\"✓ Path of markdown output is: {md_output_path.resolve()}\")"
    ]
   },
   {
@@ -249,7 +315,7 @@
    "outputs": [],
    "source": [
     "for file, confidence_report in confidence_reports.items():\n",
-    "    print(f\"Conversion confidence for {file}:\")\n",
+    "    print(f\"✓ Conversion confidence for {file}:\")\n",
     "    \n",
     "    print(f\"Average confidence: \\x1b[1m{confidence_report.mean_grade.name}\\033[0m (score {confidence_report.mean_score:.3f})\")\n",
     "    \n",
@@ -281,7 +347,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
