--- a/notebooks/use-cases/hybrid-chunking-demonstration.ipynb
+++ b/notebooks/use-cases/hybrid-chunking-demonstration.ipynb
@@ -24,32 +24,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": null,
    "id": "246cabfe",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
-      "To disable this warning, you can either:\n",
-      "\t- Avoid using `tokenizers` before the fork if possible\n",
-      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%pip install -qq docling transformers\n",
     "\n",
-    "import random\n",
     "from pathlib import Path\n",
     "from docling.chunking import HybridChunker\n",
     "from docling.document_converter import DocumentConverter\n",
@@ -71,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": null,
    "id": "c24f2872",
    "metadata": {
     "tags": [
@@ -96,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": null,
    "id": "c1e784b0",
    "metadata": {},
    "outputs": [],
@@ -115,14 +96,14 @@
     "Next, we set up the different chunking strategies we want to demonstrate. The cell below contains three configurations:\n",
     "\n",
     "1.  **`default_chunker`**:A `HybridChunker` initialized without an explicit tokenizer or token limit. It automatically uses a default tokenizer (e.g., a sentence-embedding model's tokenizer) and its derived default token limit (typically 512 tokens). By default, it aggressively merges adjacent small structural chunks (like short paragraphs) to create a larger, contextually richer chunk, stopping when it reaches the token limit as the `merge_peers` is True by default. It also splits any individual structural element that exceeds token limit.\n",
-    "2.  **`no_merge_chunker`**: A `HybridChunker` with `merge_peers=False`. This prevents the merging of adjacent chunks, resulting in smaller chunks that strictly follow the document's structure.Note, this still splits any individual structural element that exceeds token limit.\n",
+    "2.  **`no_merge_chunker`**: A `HybridChunker` with `merge_peers=False`. This prevents the merging of adjacent chunks, resulting in smaller chunks that strictly follow the document's structure. Note, this still splits any individual structural element that exceeds token limit.\n",
     "2.  **`custom_chunker`**: A `HybridChunker` configured with a tokenizer of choice and a `max_tokens` limit.\n",
     "For additional customization, check the [official documentation](https://docling-project.github.io/docling/concepts/chunking/)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": null,
    "id": "adf0d93c",
    "metadata": {},
    "outputs": [],
@@ -159,29 +140,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": null,
    "id": "e463c95a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-10-09 11:58:42,211 - INFO - detected formats: [<InputFormat.JSON_DOCLING: 'json_docling'>]\n",
-      "2025-10-09 11:58:42,264 - INFO - Going to convert document batch...\n",
-      "2025-10-09 11:58:42,265 - INFO - Initializing pipeline for SimplePipeline with options hash 995a146ad601044538e6a923bea22f4e\n",
-      "2025-10-09 11:58:42,266 - INFO - Processing document 2206.01062.json\n",
-      "2025-10-09 11:58:42,269 - INFO - Finished converting document 2206.01062.json in 0.14 sec.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Document loaded: 2206.01062\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Convert to a docling document\n",
     "doc = DocumentConverter().convert(source=file_to_chunk)\n",
@@ -209,18 +171,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": null,
    "id": "393654ee",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Helper function created for analyzing chunks\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def analyze_chunks(chunker, doc, num_samples=3):\n",
     "    \"\"\"Analyze chunks produced by a chunker, including token counts and statistics.\"\"\"\n",
@@ -243,9 +197,9 @@
     "        avg_tokens = sum(token_counts) / len(token_counts)\n",
     "        print(f\"Average tokens per chunk: {avg_tokens:.1f}\")\n",
     "    \n",
-    "    # Show samples\n",
+    "    # Show first num_samples samples from the chunks\n",
     "    print(\"\\nSample chunks:\")\n",
-    "    samples = random.sample(chunks, min(len(chunks), num_samples))\n",
+    "    samples = chunks[:min(len(chunks), num_samples)]\n",
     "    for i, chunk in enumerate(samples, 1):\n",
     "        text = chunker.contextualize(chunk=chunk)\n",
     "        print(f\"\\nChunk {i}:\")\n",
@@ -269,58 +223,17 @@
    "source": [
     "### 1. Default HybridChunker\n",
     "\n",
-    "First, let's see how the HybridChunker with default settinsg. "
+    "First, let's see how the HybridChunker with default settings behaves.\n",
+    "\n",
+    "> ⚠️ **Expected Warning**: The output may show tokenizer warnings about sequence length limits. These are informational only and do not affect the chunking results."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": null,
    "id": "94e75003",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Token indices sequence length is longer than the specified maximum sequence length for this model (2999 > 512). Running this sequence through the model will result in indexing errors\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Running default HybridChunker (no tokenizer)...\n",
-      "\n",
-      "Total chunks: 75\n",
-      "Average tokens per chunk: 196.7\n",
-      "\n",
-      "Sample chunks:\n",
-      "\n",
-      "Chunk 1:\n",
-      "Token count: 253\n",
-      "----------------------------------------\n",
-      "4 ANNOTATION CAMPAIGN\n",
-      "45.00. Text, triple inter-annotator mAP @0.5-0.95 (%).All = 84-86. Text, triple inter-annotator mAP @0.5-0.95 (%).Fin = 81-86. Text, triple inter-annotator mAP @0.5-0.95 (%).Man ...\n",
-      "----------------------------------------\n",
-      "\n",
-      "Chunk 2:\n",
-      "Token count: 258\n",
-      "----------------------------------------\n",
-      "4 ANNOTATION CAMPAIGN\n",
-      "% of Total.Test = 15.77. Section-header, % of Total.Val = 12.85. Section-header, triple inter-annotator mAP @0.5-0.95 (%).All = 83-84. Section-header, triple inter-annotator mAP ...\n",
-      "----------------------------------------\n",
-      "\n",
-      "Chunk 3:\n",
-      "Token count: 59\n",
-      "----------------------------------------\n",
-      "Baselines for Object Detection\n",
-      "document.\n",
-      "\n",
-      "Table 3: Performance of a Mask R-CNN R50 network in mAP@0.5-0.95 scores trained on DocLayNet with different class label sets. The reduced label sets were obta...\n",
-      "----------------------------------------\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Running default HybridChunker (no tokenizer)...\")\n",
     "analyze_chunks(default_chunker, doc)"
@@ -338,52 +251,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": null,
    "id": "fcacdd92",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Token indices sequence length is longer than the specified maximum sequence length for this model (2999 > 512). Running this sequence through the model will result in indexing errors\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Running HybridChunker (with merge_peers=False)...\n",
-      "\n",
-      "Total chunks: 121\n",
-      "Average tokens per chunk: 124.9\n",
-      "\n",
-      "Sample chunks:\n",
-      "\n",
-      "Chunk 1:\n",
-      "Token count: 40\n",
-      "----------------------------------------\n",
-      "DocLayNet: A Large Human-Annotated Dataset for Document-Layout Analysis\n",
-      "Michele Dolfi IBM Research Rueschlikon, Switzerland dol@zurich.ibm.com\n",
-      "----------------------------------------\n",
-      "\n",
-      "Chunk 2:\n",
-      "Token count: 134\n",
-      "----------------------------------------\n",
-      "1 INTRODUCTION\n",
-      "- (1) Human Annotation : In contrast to PubLayNet and DocBank, we relied on human annotation instead of automation approaches to generate the data set.\n",
-      "- (2) Large Layout Variability : ...\n",
-      "----------------------------------------\n",
-      "\n",
-      "Chunk 3:\n",
-      "Token count: 250\n",
-      "----------------------------------------\n",
-      "4 ANNOTATION CAMPAIGN\n",
-      "Phase 2: Label selection and guideline. We reviewed the collected documents and identified the most common structural features they exhibit. This was achieved by identifying recu...\n",
-      "----------------------------------------\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Running HybridChunker (with merge_peers=False)...\")\n",
     "analyze_chunks(no_merge_chunker, doc)"
@@ -401,52 +272,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": null,
    "id": "31d5b5bb",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Token indices sequence length is longer than the specified maximum sequence length for this model (2999 > 512). Running this sequence through the model will result in indexing errors\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Running  HybridChunker with custom tokenizer and max_tokens...\n",
-      "\n",
-      "Total chunks: 142\n",
-      "Average tokens per chunk: 106.8\n",
-      "\n",
-      "Sample chunks:\n",
-      "\n",
-      "Chunk 1:\n",
-      "Token count: 130\n",
-      "----------------------------------------\n",
-      "4 ANNOTATION CAMPAIGN\n",
-      "@0.5-0.95 (%).Ten = 96-98. Page-header, Count = 58022. Page-header, % of Total.Train = 5.10. Page-header, % of Total.Test = 6.70. Page-header, % of Total.Val = 5.06. Page-header,...\n",
-      "----------------------------------------\n",
-      "\n",
-      "Chunk 2:\n",
-      "Token count: 125\n",
-      "----------------------------------------\n",
-      "Dataset Comparison\n",
-      "KDD '22, August 14-18, 2022, Washington, DC, USA Birgit Pfitzmann, Christoph Auer, Michele Dolfi, Ahmed S. Nassar, and Peter Staar\n",
-      "Table 5: Prediction Performance (mAP@0.5-0.95) of ...\n",
-      "----------------------------------------\n",
-      "\n",
-      "Chunk 3:\n",
-      "Token count: 30\n",
-      "----------------------------------------\n",
-      "3 THE DOCLAYNET DATASET\n",
-      "JSON). All additional files are linked to the primary page images by their matching filenames.\n",
-      "----------------------------------------\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Running  HybridChunker with custom tokenizer and max_tokens...\")\n",
     "analyze_chunks(custom_chunker, doc)"
